[project]
name = "lesson-16"
version = "0.1.0"
description = "Домашнее задание Lesson-16"
authors = [
    {name = "Ramin Safarov",email = "silent1962@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9.0,<4.0"
dependencies = [
    "selene (==2.0.0rc9)",
    "pytest (==8.3.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

